# MerchantShield

./: README.md  demo_script.html  manage.py  pyproject.toml  seed_data.py
emvs/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
merchant_verification/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
merchant_verification/api/: __init__.py  urls.py  views.py
merchant_verification/migrations/: 0001_initial.py
merchant_verification/ml_models/: __init__.py  risk_assessment.py  transaction_analysis.py
merchant_verification/services/: external_api.py
merchant_verification/static/css/: custom.css
merchant_verification/static/js/: dashboard.js  merchant_verification.js
merchant_verification/templates/: add_merchant.html  base.html  dashboard.html  flagged_merchants.html  login.html  merchant_detail.html  merchant_list.html  reports.html  verify_merchant.html
tests/: __init__.py  test_api.py  test_ml_models.py  test_models.py  test_views.py
